# VibeThinker

./: .gitignore  LICENSE  PR_SUMMARY.md  README.md  fix_flakes.py  flake8_errors.txt  pipeline.sh  pipeline_t4_5h.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: gaps_implementation_plan.md  implementation_guide.md  pipeline_review.md  review_report.md  review_report2.md  source_code_analysis.md  walkthrough.md
docs/prompts/: gaps-plan-review.md  implement.md  repair.md  review.md  task.md
eval/math/: README.md  eval_model.sh  main_evaluation.py
eval/math/data/: aime25.parquet  gpqa.parquet  hmmt25.parquet
scripts/: flatten_to_arrow.py  prepare_apps_data.py  prepare_data.py  prepare_spectrum_data.py  setup_llama_cpp.sh  train_sft_specialist.py  train_spectrum_phase.py
src/vibethinker/: cost_analysis.py  debugger.py  diversity_probing.py  evaluation.py  export_gguf.py  grpo_custom.py  inference_optimize.py  model_fusion.py  monitor.py  train_complete.py  training_integration.py  visualization.py
tests/unit/: test_cost_analysis.py  test_debugger.py  test_diversity_probing.py  test_diversity_probing_memory.py  test_export_gguf.py  test_flatten_to_arrow.py  test_grpo_custom.py  test_grpo_gradient_accum.py  test_inference_optimize.py  test_model_fusion.py  test_monitor.py  test_prepare_spectrum_data.py  test_train_complete.py  test_train_complete_code_rl.py  test_train_sft_specialist.py  test_train_spectrum_phase.py  test_training_integration.py  test_visualization.py
